[Change] Update tcp_bbr role and associated molecule tests

--- a/roles/tcp_bbr/molecule/default/converge.yml
+++ b/roles/tcp_bbr/molecule/default/converge.yml
@@ -1,6 +1,6 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - linuxhq.linux.tcp_bbr
+    - tcp_bbr
 ...
