--- a/roles/tcp_bbr/meta/main.yml
+++ b/roles/tcp_bbr/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: TCP Bottleneck Bandwidth and RRT
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
