--- a/roles/tcp_bbr/molecule/default/molecule.yml
+++ b/roles/tcp_bbr/molecule/default/molecule.yml
@@ -2,76 +2,35 @@
 dependency:
   name: galaxy
   options:
-    requirements-file: ../../molecule/requirements.yml
+    requirements-file: ../../requirements.yml
 
 driver:
-  name: ec2
+  name: vagrant
 
 platforms:
-  - name: &c7 centos-7
-    aws_profile: molecule
-    image_owner: '125523088429'
-    image_name: 'CentOS Linux 7 x86_64 - 2211'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: centos
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *c7
+  - name: almalinux9
+    box: bento/almalinux-9
 
-  - name: &a8 almalinux-8
-    aws_profile: molecule
-    image_owner: '764336703387'
-    image_name: 'AlmaLinux OS 8.8.20230524 x86_64'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: ec2-user
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *a8
-
-  - name: &a9 almalinux-9
-    aws_profile: molecule
-    image_owner: '764336703387'
-    image_name: 'AlmaLinux OS 9.2.20230804 x86_64'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: ec2-user
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *a9
-
-  - name: &d11 debian-11
-    aws_profile: molecule
-    image_owner: '136693071363'
-    image_name: 'debian-11-amd64*'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: admin
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *d11
-
-  - name: &d12 debian-12
-    aws_profile: molecule
-    image_owner: '136693071363'
-    image_name: 'debian-12-amd64*'
-    instance_type: t2.micro
-    key_inject_method: ec2
-    ssh_user: admin
-    vpc_subnet_id: subnet-00d20739fc370ed5e
-    tags:
-      Name: *d12
+  - name: debian12
+    box: bento/debian-12
 
 provisioner:
   name: ansible
   log: true
   options:
     diff: true
-  playbooks:
-    create: ../../../../molecule/create.yml
-    destroy: ../../../../molecule/destroy.yml
-    prepare: ../../../../molecule/prepare.yml
+  inventory:
+    group_vars:
+      all:
+        tcp_bbr_modules:
+          - sch_fq
+          - tcp_bbr
+        tcp_bbr_sysctl:
+          - key: net.core.default_qdisc
+            value: fq
+          - key: net.ipv4.tcp_congestion_control
+            value: bbr
+        tcp_bbr_sysctl_file: /etc/sysctl.d/10-tcp_bbr.conf
 
 verifier:
   name: ansible
