[Change] Update systemd_timedatectl role and associated molecule tests

--- a/roles/systemd_timedatectl/molecule/default/converge.yml
+++ b/roles/systemd_timedatectl/molecule/default/converge.yml
@@ -1,7 +1,7 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - role: linuxhq.linux.systemd_timedatectl
+    - role: systemd_timedatectl
       systemd_timedatectl_ntp: false
 ...
