--- a/roles/systemd_timedatectl/meta/main.yml
+++ b/roles/systemd_timedatectl/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Control the system time and date
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
