--- a/roles/epel/defaults/main.yml
+++ b/roles/epel/defaults/main.yml
@@ -1,10 +1,6 @@
 ---
 epel_packages: []
-epel_releasever: "{{ ansible_distribution_major_version }}"
-epel_repository_epel: true
-epel_repository_epel_debuginfo: false
-epel_repository_epel_source: false
-epel_repository_testing: false
-epel_repository_testing_debuginfo: false
-epel_repository_testing_source: false
+epel_repositories:
+  - name: epel
+    state: enabled
 ...
