--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,9 @@
 ---
 collections:
   - name: ansible.posix
+    version: 2.0.0
   - name: community.docker
+    version: 4.3.1
   - name: community.general
+    version: 10.3.1
 ...
