--- a/roles/epel/meta/main.yml
+++ b/roles/epel/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Extra Packages for Enterprise Linux
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
