--- a/roles/epel/molecule/default/verify.yml
+++ b/roles/epel/molecule/default/verify.yml
@@ -1,17 +1,14 @@
 ---
-- name: Verify
+- name: Ensure test play is verified
   hosts: all
   tasks:
     - name: Ensure package facts are gathered
       ansible.builtin.package_facts:
         manager: rpm
         strategy: first
-      register: _package_facts
 
     - name: Ensure package is present in package facts
       ansible.builtin.assert:
         that:
-          - _package in ansible_facts.packages
-      vars:
-        _package: ansible
+          - '"msmtp" in packages'
 ...
