--- a/roles/systemd_rc_local/molecule/default/verify.yml
+++ b/roles/systemd_rc_local/molecule/default/verify.yml
@@ -1,16 +1,15 @@
 ---
-- name: Verify
+- name: Ensure test play is verified
   hosts: all
   tasks:
     - name: Ensure service facts are gathered
+      tags:
+        - systemd_rc_local
       ansible.builtin.service_facts:
-      register: _service_facts
-
-    - name: Ensure service facts are displayed
-      ansible.builtin.debug:
-        msg: "{{ _service_facts }}"
 
     - name: Ensure service is present in service facts
+      tags:
+        - systemd_rc_local
       ansible.builtin.assert:
         that:
           - services['rc-local.service'] is defined
