--- a/roles/systemd_rc_local/tasks/main.yml
+++ b/roles/systemd_rc_local/tasks/main.yml
@@ -17,10 +17,11 @@
   ansible.builtin.dnf:
     name: systemd
     state: present
+    update_cache: true
   when:
     - ansible_os_family == 'RedHat'
 
-- name: Ensure system rc.local os specific vars are present
+- name: Ensure systemd rc.local os specific vars are present
   tags:
     - systemd_rc_local
   ansible.builtin.include_vars:
@@ -36,9 +37,10 @@
     mode: '0755'
     owner: root
     src: rc.local.j2
-  notify: Restart rc-local
+  notify:
+    - Restart rc-local
   when:
-    - systemd_rc_local | length > 0
+    - systemd_rc_local_list | length > 0
 
 - name: Ensure systemd is reloaded
   tags:
@@ -47,7 +49,7 @@
   ansible.builtin.systemd_service:
     daemon_reload: true
   when:
-    - systemd_rc_local | length > 0
+    - systemd_rc_local_list | length > 0
 
 - name: Ensure systemd rc-local is started and enabled on boot
   tags:
@@ -58,5 +60,5 @@
     name: rc-local
     state: started
   when:
-    - systemd_rc_local | length > 0
+    - systemd_rc_local_list | length > 0
 ...
