[Change] Update rpmfusion role and associated molecule tests

--- a/roles/rpmfusion/defaults/main.yml
+++ b/roles/rpmfusion/defaults/main.yml
@@ -1,16 +1,8 @@
 ---
 rpmfusion_packages: []
-rpmfusion_releasever: "{{ ansible_distribution_major_version }}"
-rpmfusion_repository_free_updates: true
-rpmfusion_repository_free_updates_debuginfo: false
-rpmfusion_repository_free_updates_source: false
-rpmfusion_repository_free_updates_testing: false
-rpmfusion_repository_free_updates_testing_debuginfo: false
-rpmfusion_repository_free_updates_testing_source: false
-rpmfusion_repository_nonfree_updates: true
-rpmfusion_repository_nonfree_updates_debuginfo: false
-rpmfusion_repository_nonfree_updates_source: false
-rpmfusion_repository_nonfree_updates_testing: false
-rpmfusion_repository_nonfree_updates_testing_debuginfo: false
-rpmfusion_repository_nonfree_updates_testing_source: false
+rpmfusion_repositories:
+  - name: rpmfusion-free-updates
+    state: enabled
+  - name: rpmfusion-nonfree-updates
+    state: enabled
 ...
