--- a/roles/rpmfusion/meta/main.yml
+++ b/roles/rpmfusion/meta/main.yml
@@ -1,6 +1,6 @@
 ---
 dependencies:
-  - role: linuxhq.linux.epel
+  - role: epel
     tags: rpmfusion
 galaxy_info:
   role_name: rpmfusion
@@ -8,6 +8,7 @@ galaxy_info:
   description: Merger of Dribble, Freshrpms, and Livna
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
