--- a/roles/rc_local/molecule/default/verify.yml
+++ b/roles/rc_local/molecule/default/verify.yml
@@ -4,12 +4,12 @@
   tasks:
     - name: Ensure service facts are gathered
       tags:
-        - systemd_rc_local
+        - rc_local
       ansible.builtin.service_facts:
 
     - name: Ensure service is present in service facts
       tags:
-        - systemd_rc_local
+        - rc_local
       ansible.builtin.assert:
         that:
           - services['rc-local.service'] is defined
