--- a/roles/sysctl/meta/main.yml
+++ b/roles/sysctl/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Configure kernel parameters at runtime
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
