--- a/roles/sysctl/molecule/default/converge.yml
+++ b/roles/sysctl/molecule/default/converge.yml
@@ -1,8 +1,10 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - role: linuxhq.linux.sysctl
+    - sysctl
+
+    - role: sysctl
       sysctl_conf:
         kernel.dmesg_restrict: 1
         kernel.modules_disabled: 1
