[Change] Update to selinux role and associated molecule tests

--- a/roles/selinux/defaults/main.yml
+++ b/roles/selinux/defaults/main.yml
@@ -1,5 +1,8 @@
 ---
 selinux_conf: /etc/selinux/config
+selinux_packages:
+  - python3-libselinux
+  - selinux-policy
 selinux_policy: targeted
 selinux_reboot: false
 selinux_reboot_timeout: 600
