--- a/roles/hostnamectl/meta/main.yml
+++ b/roles/hostnamectl/meta/main.yml
@@ -1,11 +1,12 @@
 ---
 dependencies: []
 galaxy_info:
-  role_name: systemd_hostnamectl
+  role_name: hostnamectl
   author: Taylor Kimball
   description: Control the system hostname
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: Debian
       versions:
@@ -14,6 +15,7 @@ galaxy_info:
       versions:
         - all
   galaxy_tags:
+    - ctl
     - hostname
     - linux
     - systemd
