[Change] Update post_transaction_actions role and molecule tests

--- a/roles/post_transaction_actions/defaults/main.yml
+++ b/roles/post_transaction_actions/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-pta_actiondir: /etc/dnf/plugins/post-transaction-actions.d/
-pta_actions: []
-pta_enabled: true
+post_transaction_actions_dir: /etc/dnf/plugins/post-transaction-actions.d/
+post_transaction_actions_enabled: true
+post_transaction_actions_list: []
 ...
