--- a/roles/post_transaction_actions/meta/main.yml
+++ b/roles/post_transaction_actions/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: DNF post-transaction-actions Plugin
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: EL
       versions:
