--- a/roles/localectl/meta/main.yml
+++ b/roles/localectl/meta/main.yml
@@ -1,15 +1,13 @@
 ---
 dependencies: []
 galaxy_info:
-  role_name: systemd_localectl
+  role_name: localectl
   author: Taylor Kimball
   description: Control the system locale and keyboard layout settings
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
-    - name: Debian
-      versions:
-        - all
     - name: EL
       versions:
         - all
