--- a/roles/localectl/molecule/default/verify.yml
+++ b/roles/localectl/molecule/default/verify.yml
@@ -1,18 +1,22 @@
 ---
-- name: Verify
+- name: Ensure test play is verified
   hosts: all
   tasks:
     - name: Ensure localectl status is gathered
+      tags:
+        - localectl
       become: true
       ansible.builtin.command:
         cmd: >
           localectl status
-      register: _status
+      register: __localectl_status
       changed_when: false
 
     - name: Esnure localectl configuration matches
+      tags:
+        - localectl
       ansible.builtin.assert:
         that:
-          - "'VC Keymap: us' in _status.stdout"
-          - "'X11 Layout: us' in _status.stdout"
+          - "'VC Keymap: us' in __localectl_status.stdout"
+          - "'X11 Layout: us' in __localectl_status.stdout"
 ...
