--- a/roles/directory/meta/main.yml
+++ b/roles/directory/meta/main.yml
@@ -6,6 +6,7 @@ galaxy_info:
   description: Manage presence of directories on a host
   license: GPLv3
   min_ansible_version: 2.15.0
+  namespace: linuxhq
   platforms:
     - name: GenericLinux
       versions:
