--- a/roles/directory/molecule/default/converge.yml
+++ b/roles/directory/molecule/default/converge.yml
@@ -1,18 +1,9 @@
 ---
-- name: Converge
+- name: Ensure test play is executed
   hosts: all
   roles:
-    - role: linuxhq.linux.directory
-      directories:
-        - group: daemon
-          mode: '0755'
-          owner: root
-          paths:
-            - path: /tmp/linuxhq_root_daemon_0755
-            - path: /tmp/linuxhq_root_root_0700
-              group: root
-              mode: '0700'
-            - path: /tmp/linuxhq_daemon_daemon_750
-              owner: daemon
-              mode: '0750'
+    - role: directory
+      directory_list: []
+
+    - directory
 ...
