--- a/roles/directory/tasks/main.yml
+++ b/roles/directory/tasks/main.yml
@@ -4,21 +4,19 @@
     - directory
   become: true
   ansible.builtin.file:
-    group: "{{ _directory.1.group | default(_directory.0.group) }}"
-    mode: "{{ _directory.1.mode | default(_directory.0.mode) }}"
-    owner: "{{ _directory.1.owner | default(_directory.0.owner) }}"
-    path: "{{ _directory.1.path }}"
-    state: directory
-  loop: "{{ q('ansible.builtin.subelements', directories, 'paths', {'skip_missing': true}) }}"
+    group: "{{ _directory.0.group | d(omit) }}"
+    mode: "{{ _directory.0.mode | d(omit) }}"
+    owner: "{{ _directory.0.owner | d(omit) }}"
+    path: "{{ _directory.1 }}"
+    state: "{{ _directory.0.state | d('directory') }}"
+  loop:
+    "{{ q('ansible.builtin.subelements',
+          directory_list,
+          'paths',
+          {'skip_missing': true}) }}"
   loop_control:
-    label: "{{ _directory.1.path | default(none) }}"
+    label: "{{ _directory.1 | d(none) }}"
     loop_var: _directory
   when:
-    - _directory.0.group or
-      _directory.1.group is defined
-    - _directory.0.mode or
-      _directory.1.mode is defined
-    - _directory.0.owner or
-      _directory.1.owner is defined
-    - _directory.1.path is defined
+    - _directory.1 is defined
 ...
