[Change] Align all molecule test play names

--- a/roles/template/molecule/default/verify.yml
+++ b/roles/template/molecule/default/verify.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure test play is verified
+- name: Verify
   hosts: all
   tasks:
     - name: Ensure status of template destinations are gathered
