--- a/roles/authorized_key/molecule/default/verify.yml
+++ b/roles/authorized_key/molecule/default/verify.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure test play is verified
+- name: Verify
   hosts: all
   pre_tasks:
     - name: Ensure output from ssh-keygen is gathered
