--- a/roles/timedatectl/molecule/default/verify.yml
+++ b/roles/timedatectl/molecule/default/verify.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure test play is verified
+- name: Verify
   hosts: all
   tasks:
     - name: Ensure timedatectl status is gathered
