--- a/roles/user/molecule/default/verify.yml
+++ b/roles/user/molecule/default/verify.yml
@@ -1,5 +1,5 @@
 ---
-- name: Ensure test play is verified
+- name: Verify
   hosts: all
   pre_tasks:
     - name: Ensure user information is gathered
